--- a/style.css
+++ b/style.css
@@ -1,13 +1,19 @@
+body {
+  background-color: #edf1f4;
+  margin: 120px;
+  font-family: Arial, sans-serif;
+}
+
 .social-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 20px;
-  margin: 120px;
+  margin-top: 120px;
+  margin-bottom: 120px;
 }
 
 .social-title {
-  font-family: Arial, sans-serif;
   font-size: 40px;
   line-height: 44px;
   font-weight: bold;
@@ -31,10 +37,13 @@
 }
 
 @media (width <= 999px) {
+  body {
+    margin: 15px;
+  }
+
   .social-container {
     flex-direction: column;
-    align-items: flex-start;
-    margin: 120px;
+    /* margin: 120px; */
   }
 }
 
@@ -54,5 +63,259 @@
   .social-icons__img-small {
     width: 76.5px;
     height: 76.5px;
+  }
+}
+
+.card-list {
+  display: flex;
+  gap: 10px;
+  justify-content: space-between;
+}
+
+.card {
+  display: flex;
+  gap: 10px;
+  width: 23%;
+  min-width: 129px;
+  background-color: white;
+  border-radius: 16px;
+  padding: 30px 25px;
+}
+
+.feedback-title {
+  font-size: 22px;
+  line-height: 26.4px;
+  margin: 0 0 10px;
+}
+
+.mark {
+  font-size: 16px;
+}
+
+.star {
+  vertical-align: -2px;
+}
+
+/* .feedback-link {
+  display: flex;
+  text-decoration: none;
+  gap: 10px;
+} */
+
+@media (width <= 1000px) {
+  .card-list {
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
+  }
+
+  .card {
+    width: 38%;
+  }
+}
+
+@media (width <= 768px) {
+  .card {
+    width: 29%;
+    padding: 15px;
+  }
+}
+
+@media (width <= 360px) {
+  body {
+    margin: 48px 15px;
+  }
+  .card {
+    width: 23%;
+    
+  }
+
+  .feedback-title {
+    font-size: 18px;
+    line-height: 25.2px;
+  }
+
+  .mark {
+    font-size: 14px;
+  }
+
+  .feedback-icon {
+    width: 51px;
+  }
+
+  .star {
+    height: 14px;
+  }
+}
+
+.testimonial-container {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  margin-top: 120px;
+}
+
+.section-title {
+  font-size: 40px;
+  line-height: 44px;
+}
+
+.nav-buttons {
+  display: flex;
+  gap: 10px;
+}
+
+.section-nav-button {
+  width: 36px;
+  height: 36px;
+  border-radius: 20px;
+  border: 2px solid #127fff;
+  color: #127fff;
+}
+
+.btn-left {
+  background-image: url("./images/left-btn.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.btn-right {
+  background-image: url("./images/right-btn.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.testimonial-slider {
+  display: flex;
+  gap: 32px;
+}
+
+.testimonial {
+  width: 32%;
+  flex-direction: column;
+  display: flex;
+  justify-content: space-between;
+}
+
+.section-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.testimonial-author {
+  display: flex;
+  gap: 16px;
+}
+
+.testimonial-author__name {
+  font-size: 22px;
+  line-height: 26.4px;
+  margin-top: 0;
+  margin-bottom: -4px;
+}
+
+.stars {
+  color: #127fff;
+  font-size: 25px;
+}
+
+.testimonial-text {
+  margin-top: 32px;
+  margin-bottom: 0;
+}
+
+.testimonial-button {
+  width: 202px;
+  height: 36px;
+  color: #127fff;
+  font-weight: 600px;
+  border: 2px solid #127fff;
+  border-radius: 8px;
+  margin-top: 32px;
+}
+
+@media (width <= 768px) {
+  .testimonial-slider {
+    flex-direction: column;
+  }
+
+  .testimonial {
+    width: 100%;
+  }
+}
+
+@media (width <= 430px) {
+  .card-list {
+    margin-top: 48px;
+  }
+
+  .testimonial-container {
+    margin-top: 48px;
+  }
+
+  .testimonial-author__icon {
+    width: 47px;
+    height: 47px;
+  }
+
+  .stars {
+    font-size: 20px;
+  }
+}
+
+.section-title {
+  font-size: 30px;
+  line-height: 33px;
+}
+
+.testimonial-author__name {
+  font-size: 18px;
+  line-height: 25.2px;
+}
+
+.testimonial-text {
+  font-size: 14px;
+}
+
+.awards {
+  margin-top: 120px;
+}
+
+
+
+
+.image-container {
+  display: flex; /* Располагаем изображения в ряд */
+  gap: 16px; /* Отступ между изображениями */
+  width: 100%;
+}
+
+.image-container img {
+  width: 23.5%; 
+  object-fit: cover; /* Обрезаем, чтобы изображение заполняло область */
+  border-radius: 10px; /* Скругляем углы */
+}
+
+
+
+@media (width <= 360px) {
+  .testimonial-slider {
+    flex-direction: row;
+    width: 100%; 
+    overflow-x: scroll; 
+  }
+  .awards {
+    margin-top: 48px;
+  }
+
+  .image-container {
+    width: 100%; 
+    overflow-x: scroll;
+    white-space: nowrap; 
+  }
+
+  .image-container img {
+    width: 100vw; /* Каждое изображение занимает 100% экрана */
   }
 }
